@@ -29,7 +29,7 @@
       $this->base_dir = dirname(__FILE__);
       $this->base_url = 'http://'.$_SERVER['HTTP_HOST'].rtrim(dirname($_SERVER['PHP_SELF']),'/');
 
-      $this->version = '';
+      $this->version = '2.6.2b9';
 
       // Load preferences
       $this->GetFeature('core');
