@@ -1,4 +1,5 @@
 SVN  Will Entriken <cameralife AT phor.net>
+* Security updates, thanks to Omer Singer and BackDoor
 * Merge themes
 * Fix some XSS and injection exploits
 * New iconsets and themes
